--- a/LibraryManagement.API/appsettings.json
+++ b/LibraryManagement.API/appsettings.json
@@ -6,6 +6,7 @@
     }
   },
   "ConnectionStrings": {
+    //"ConnectionString": "Host=localhost;Port=5432;Database=library;user Id=root;Password=root; Include Error Detail= true",
     "ConnectionString": "Host=localhost;Port=5432;Database=test;user Id=postgres;Password=root; Include Error Detail= true"
   },
   "AllowedHosts": "*"
